--- a/openfisca_barcelona/tests/benefits/EG-233.yaml
+++ b/openfisca_barcelona/tests/benefits/EG-233.yaml
@@ -7,8 +7,8 @@
      altres_adults: ["adult3"]
      menors: ["menor1"]
      nivell_de_risc_d_exclusio_social: greu
-     tipus_familia_monoparental: no
-     tipus_familia_nombrosa: no
+     tipus_familia_nombrosa: nop
+     tipus_familia_monoparental: nop
      volum_del_negoci_familiar:
       2016: 0
      rendiments_del_patrimoni:
@@ -32,7 +32,7 @@
      grau_discapacitat: 0
    - id: "menor1"
      es_escolaritzat_entre_P3_i_4rt_ESO: true
-     tipus_custodia: "total"
+     tipus_custodia: total
      ingressos_bruts:
       2016: 1739
      grau_discapacitat: 0
@@ -49,8 +49,8 @@
      altres_adults: ["adult3"]
      menors: ["menor1"]
      nivell_de_risc_d_exclusio_social: greu
-     tipus_familia_monoparental: no
-     tipus_familia_nombrosa: no
+     tipus_familia_monoparental: nop
+     tipus_familia_nombrosa: nop
      volum_del_negoci_familiar:
       2016: 0
      rendiments_del_patrimoni:
@@ -74,7 +74,7 @@
      grau_discapacitat: 0
    - id: "menor1"
      es_escolaritzat_entre_P3_i_4rt_ESO: true
-     tipus_custodia: "Compartida"
+     tipus_custodia: compartida
      ingressos_bruts:
       2016: 1739
      grau_discapacitat: 0
@@ -92,8 +92,8 @@
      altres_adults: ["adult3"]
      menors: ["menor1"]
      nivell_de_risc_d_exclusio_social: greu
-     tipus_familia_monoparental: no
-     tipus_familia_nombrosa: no
+     tipus_familia_monoparental: nop
+     tipus_familia_nombrosa: nop
      volum_del_negoci_familiar:
       2016: 0
      rendiments_del_patrimoni:
@@ -117,7 +117,7 @@
      grau_discapacitat: 0
    - id: "menor1"
      es_escolaritzat_entre_P3_i_4rt_ESO: true
-     tipus_custodia: "cap"
+     tipus_custodia: cap
      ingressos_bruts:
       2016: 1739
      grau_discapacitat: 0
@@ -147,11 +147,11 @@
      es_escolaritzat_entre_P3_i_4rt_ESO: true
      ingressos_bruts:
       2016: 2880
-     tipus_custodia: "total"
+     tipus_custodia: total
   output_variables:
     EG_233_mensual: [ 0, 0, 0, 3 ]
 
-- name: "Persona amb tots els condicionants i nivell de renda superior a l'ordinari no reb l'ajuda ordinaria adult 1"
+- name: "Persona amb tots els condicionants i nivell de renda superior a l'ordinari nop reb l'ajuda ordinaria adult 1"
   description: EG_233 - AJUTS INDIVIDUALS DE BEQUES MENJADOR CIUTAT BARCELONA
   period: 2017-01
   absolute_error_margin: false
@@ -173,12 +173,12 @@
      es_escolaritzat_entre_P3_i_4rt_ESO: true
      ingressos_bruts:
       2016: 2880
-     tipus_custodia: "total"
+     tipus_custodia: total
   output_variables:
     EG_233_mensual: [ 0, 0, 0, 0 ]
 
 
-- name: "Persona amb tots els condicionants i nivell de renda superior a l'ordinari no reb l'ajuda ordinaria, adult 2"
+- name: "Persona amb tots els condicionants i nivell de renda superior a l'ordinari nop reb l'ajuda ordinaria, adult 2"
   description: EG_233 - AJUTS INDIVIDUALS DE BEQUES MENJADOR CIUTAT BARCELONA
   period: 2017-01
   absolute_error_margin: false
@@ -200,11 +200,11 @@
      es_escolaritzat_entre_P3_i_4rt_ESO: true
      ingressos_bruts:
       2016: 2880
-     tipus_custodia: "total"
+     tipus_custodia: total
   output_variables:
     EG_233_mensual: [ 0, 0, 0, 0 ]
 
-- name: "Persona amb tots els condicionants i nivell de renda superior a l'ordinari no reb l'ajuda ordinaria, altres_adults"
+- name: "Persona amb tots els condicionants i nivell de renda superior a l'ordinari nop reb l'ajuda ordinaria, altres_adults"
   description: EG_233 - AJUTS INDIVIDUALS DE BEQUES MENJADOR CIUTAT BARCELONA
   period: 2017-01
   absolute_error_margin: false
@@ -226,11 +226,11 @@
      es_escolaritzat_entre_P3_i_4rt_ESO: true
      ingressos_bruts:
       2016: 2880
-     tipus_custodia: "total"
+     tipus_custodia: total
   output_variables:
     EG_233_mensual: [ 0, 0, 0, 0 ]
 
-- name: "Persona amb tots els condicionants i nivell de renda superior a l'ordinari no reb l'ajuda ordinaria, menors"
+- name: "Persona amb tots els condicionants i nivell de renda superior a l'ordinari nop reb l'ajuda ordinaria, menors"
   description: EG_233 - AJUTS INDIVIDUALS DE BEQUES MENJADOR CIUTAT BARCELONA
   period: 2017-01
   absolute_error_margin: false
@@ -252,11 +252,11 @@
      es_escolaritzat_entre_P3_i_4rt_ESO: true
      ingressos_bruts:
       2016: 4080
-     tipus_custodia: "total"
+     tipus_custodia: total
   output_variables:
     EG_233_mensual: [ 0, 0, 0, 0 ]
 
-- name: "Persona amb tots els condicionants menys escolarització i nivell de renda ordinari no reb l'ajuda ordinaria"
+- name: "Persona amb tots els condicionants menys escolarització i nivell de renda ordinari nop reb l'ajuda ordinaria"
   description: EG_233 - AJUTS INDIVIDUALS DE BEQUES MENJADOR CIUTAT BARCELONA
   period: 2017-01
   absolute_error_margin: false
@@ -278,11 +278,11 @@
      es_escolaritzat_entre_P3_i_4rt_ESO: false
      ingressos_bruts:
       2016: 2880
-     tipus_custodia: "total"
+     tipus_custodia: total
   output_variables:
     EG_233_mensual: [ 0, 0, 0, 0 ]
 
-- name: "Persona amb tots els condicionants menys custodia i nivell de renda ordinari no reb l'ajuda ordinaria"
+- name: "Persona amb tots els condicionants menys custodia i nivell de renda ordinari nop reb l'ajuda ordinaria"
   description: EG_233 - AJUTS INDIVIDUALS DE BEQUES MENJADOR CIUTAT BARCELONA
   period: 2017-01
   absolute_error_margin: false
@@ -309,7 +309,7 @@
     EG_233_mensual: [ 0, 0, 0, 0 ]
 
 
-- name: "Persona amb tots els condicionants menys custodia i nivell de renda ordinari no reb l'ajuda ordinaria"
+- name: "Persona amb tots els condicionants menys custodia i nivell de renda ordinari nop reb l'ajuda ordinaria"
   description: EG_233 - AJUTS INDIVIDUALS DE BEQUES MENJADOR CIUTAT BARCELONA
   period: 2017-01
   absolute_error_margin: false
@@ -332,12 +332,12 @@
      es_escolaritzat_entre_P3_i_4rt_ESO: true
      ingressos_bruts:
       2016: 2880
-     tipus_custodia: "cap"
+     tipus_custodia: cap
   output_variables:
     EG_233_mensual: [ 0, 0, 0, 0 ]
 
 
-- name: "Familia amb volum de negoci superior al limit NO reb l'ajuda extraordinaria"
+- name: "Familia amb volum de negoci superior al limit nop reb l'ajuda extraordinaria"
   description: EG_233 - AJUTS INDIVIDUALS DE BEQUES MENJADOR CIUTAT BARCELONA
   period: 2017-01
   absolute_error_margin: false
@@ -346,8 +346,8 @@
      altres_adults: ["adult3"]
      menors: ["menor1"]
      nivell_de_risc_d_exclusio_social: greu
-     tipus_familia_monoparental: no
-     tipus_familia_nombrosa: no
+     tipus_familia_monoparental: nop
+     tipus_familia_nombrosa: nop
      volum_del_negoci_familiar:
       2016: 155001
      rendiments_del_patrimoni:
@@ -375,12 +375,12 @@
       2016: 1728
      grau_discapacitat: 0
      en_acolliment: false
-     tipus_custodia: "total"
+     tipus_custodia: total
   output_variables:
     EG_233_mensual: [ 0, 0, 0, 3 ]
 
 
-- name: "Familia amb rendiments patrimonials superiors al llindar NO reb l'ajuda extraordinaria"
+- name: "Familia amb rendiments patrimonials superiors al llindar nop reb l'ajuda extraordinaria"
   description: EG_233 - AJUTS INDIVIDUALS DE BEQUES MENJADOR CIUTAT BARCELONA
   period: 2017-01
   absolute_error_margin: false
@@ -389,8 +389,8 @@
      altres_adults: ["adult3"]
      menors: ["menor1"]
      nivell_de_risc_d_exclusio_social: greu
-     tipus_familia_monoparental: no
-     tipus_familia_nombrosa: no
+     tipus_familia_monoparental: nop
+     tipus_familia_nombrosa: nop
      volum_del_negoci_familiar:
       2016: 0
      rendiments_del_patrimoni:
@@ -418,11 +418,11 @@
       2016: 1728
      grau_discapacitat: 0
      en_acolliment: false
-     tipus_custodia: "total"
+     tipus_custodia: total
   output_variables:
     EG_233_mensual: [ 0, 0, 0, 3 ]
 
-- name: "Familia amb valoracions cadastrals rustiques superiors al llindar NO reb l'ajuda extraordinaria"
+- name: "Familia amb valoracions cadastrals rustiques superiors al llindar nop reb l'ajuda extraordinaria"
   description: EG_233 - AJUTS INDIVIDUALS DE BEQUES MENJADOR CIUTAT BARCELONA
   period: 2017-01
   absolute_error_margin: false
@@ -431,8 +431,8 @@
      altres_adults: ["adult3"]
      menors: ["menor1"]
      nivell_de_risc_d_exclusio_social: greu
-     tipus_familia_monoparental: no
-     tipus_familia_nombrosa: no
+     tipus_familia_monoparental: nop
+     tipus_familia_nombrosa: nop
      volum_del_negoci_familiar:
       2016: 0
      rendiments_del_patrimoni:
@@ -460,12 +460,12 @@
       2016: 1728
      grau_discapacitat: 0
      en_acolliment: false
-     tipus_custodia: "total"
+     tipus_custodia: total
   output_variables:
     EG_233_mensual: [ 0, 0, 0, 3 ]
 
 
-- name: "Familia amb valoracions cadastrals urbanes superiors al llindar NO reb l'ajuda extraordinaria"
+- name: "Familia amb valoracions cadastrals urbanes superiors al llindar nop reb l'ajuda extraordinaria"
   description: EG_233 - AJUTS INDIVIDUALS DE BEQUES MENJADOR CIUTAT BARCELONA
   period: 2017-01
   absolute_error_margin: false
@@ -474,8 +474,8 @@
      altres_adults: ["adult3"]
      menors: ["menor1"]
      nivell_de_risc_d_exclusio_social: greu
-     tipus_familia_monoparental: no
-     tipus_familia_nombrosa: no
+     tipus_familia_monoparental: nop
+     tipus_familia_nombrosa: nop
      volum_del_negoci_familiar:
       2016: 0
      rendiments_del_patrimoni:
@@ -503,7 +503,7 @@
       2016: 1728
      grau_discapacitat: 0
      en_acolliment: false
-     tipus_custodia: "total"
+     tipus_custodia: total
   output_variables:
     EG_233_mensual: [ 0, 0, 0, 3 ]
 
@@ -515,7 +515,7 @@
   families:
      adults: ["adult1"]
      menors: ["menor1", "menor2"]
-     nivell_de_risc_d_exclusio_social: no
+     nivell_de_risc_d_exclusio_social: nop
      tipus_familia_monoparental: especial
      tipus_familia_nombrosa: especial
      volum_del_negoci_familiar:
@@ -544,6 +544,6 @@
       2016: 1728
      grau_discapacitat: 34
      en_acolliment: false
-     tipus_custodia: "total"
+     tipus_custodia: total
   output_variables:
     EG_233_mensual: [ 0, 6, 6 ]
