--- a/openfisca_barcelona/tests/benefits/GE-051-01.yaml
+++ b/openfisca_barcelona/tests/benefits/GE-051-01.yaml
@@ -9,7 +9,7 @@
      data_naixement: '1961-01-15'
      ingressos_bruts:
       2016: 6000
-     situacio_laboral: desocupat
+     situacio_laboral: aturat
      grau_discapacitat: 34
      ha_esgotat_prestacio_de_desocupacio: true
      demandant_d_ocupacio_durant_12_mesos: true
@@ -34,7 +34,7 @@
      data_naixement: '1961-01-15'
      ingressos_bruts:
       2016: 6000
-     situacio_laboral: desocupat
+     situacio_laboral: aturat
      grau_discapacitat: 34
      ha_esgotat_prestacio_de_desocupacio: true
      demandant_d_ocupacio_durant_12_mesos: true
@@ -49,7 +49,7 @@
      data_naixement: '1961-01-15'
      ingressos_bruts:
       2016: 6000
-     situacio_laboral: desocupat
+     situacio_laboral: aturat
      grau_discapacitat: 34
      ha_esgotat_prestacio_de_desocupacio: true
      demandant_d_ocupacio_durant_12_mesos: true
@@ -73,7 +73,7 @@
    - id: "adult1"
      ingressos_bruts:
       2016: 6000
-     situacio_laboral: desocupat
+     situacio_laboral: aturat
      grau_discapacitat: 32
      ha_esgotat_prestacio_de_desocupacio: true
      demandant_d_ocupacio_durant_12_mesos: true
@@ -97,7 +97,7 @@
    - id: "adult1"
      ingressos_bruts:
       2016: 6000
-     situacio_laboral: desocupat
+     situacio_laboral: aturat
      grau_discapacitat: 34
      ha_esgotat_prestacio_de_desocupacio: false
      demandant_d_ocupacio_durant_12_mesos: true
@@ -122,7 +122,7 @@
      ingressos_bruts:
       2016: 6000
      grau_discapacitat: 34
-     situacio_laboral: desocupat
+     situacio_laboral: aturat
      ha_esgotat_prestacio_de_desocupacio: false
      demandant_d_ocupacio_durant_12_mesos: true
      durant_el_mes_anterior_ha_presentat_solicituds_recerca_de_feina: true
@@ -146,7 +146,7 @@
      ingressos_bruts:
       2016: 6000
      grau_discapacitat: 34
-     situacio_laboral: desocupat
+     situacio_laboral: aturat
      ha_esgotat_prestacio_de_desocupacio: true
      demandant_d_ocupacio_durant_12_mesos: false
      durant_el_mes_anterior_ha_presentat_solicituds_recerca_de_feina: true
@@ -170,7 +170,7 @@
      ingressos_bruts:
       2016: 6000
      grau_discapacitat: 34
-     situacio_laboral: desocupat
+     situacio_laboral: aturat
      ha_esgotat_prestacio_de_desocupacio: true
      demandant_d_ocupacio_durant_12_mesos: true
      durant_el_mes_anterior_ha_presentat_solicituds_recerca_de_feina: false
@@ -194,7 +194,7 @@
      ingressos_bruts:
       2016: 6000
      grau_discapacitat: 34
-     situacio_laboral: desocupat
+     situacio_laboral: aturat
      ha_esgotat_prestacio_de_desocupacio: true
      demandant_d_ocupacio_durant_12_mesos: true
      durant_el_mes_anterior_ha_presentat_solicituds_recerca_de_feina: true
@@ -218,7 +218,7 @@
      ingressos_bruts:
       2016: 6000
      grau_discapacitat: 34
-     situacio_laboral: desocupat
+     situacio_laboral: aturat
      ha_esgotat_prestacio_de_desocupacio: true
      demandant_d_ocupacio_durant_12_mesos: true
      durant_el_mes_anterior_ha_presentat_solicituds_recerca_de_feina: true
@@ -242,7 +242,7 @@
      ingressos_bruts:
       2016: 6000
      grau_discapacitat: 34
-     situacio_laboral: desocupat
+     situacio_laboral: aturat
      ha_esgotat_prestacio_de_desocupacio: true
      demandant_d_ocupacio_durant_12_mesos: true
      durant_el_mes_anterior_ha_presentat_solicituds_recerca_de_feina: true
@@ -266,7 +266,7 @@
      ingressos_bruts:
       2016: 6000
      grau_discapacitat: 34
-     situacio_laboral: desocupat
+     situacio_laboral: aturat
      ha_esgotat_prestacio_de_desocupacio: true
      demandant_d_ocupacio_durant_12_mesos: true
      durant_el_mes_anterior_ha_presentat_solicituds_recerca_de_feina: true
@@ -290,7 +290,7 @@
      ingressos_bruts:
       2016: 6000
      grau_discapacitat: 34
-     situacio_laboral: desocupat
+     situacio_laboral: aturat
      ha_esgotat_prestacio_de_desocupacio: true
      demandant_d_ocupacio_durant_12_mesos: true
      durant_el_mes_anterior_ha_presentat_solicituds_recerca_de_feina: true
@@ -314,7 +314,7 @@
      ingressos_bruts:
       2016: 6000
      grau_discapacitat: 34
-     situacio_laboral: desocupat
+     situacio_laboral: aturat
      ha_esgotat_prestacio_de_desocupacio: true
      demandant_d_ocupacio_durant_12_mesos: true
      durant_el_mes_anterior_ha_presentat_solicituds_recerca_de_feina: true
