--- a/openfisca_barcelona/tests/benefits/GE-051-00.yaml
+++ b/openfisca_barcelona/tests/benefits/GE-051-00.yaml
@@ -9,7 +9,7 @@
      data_naixement: '1961-01-15'
      ingressos_bruts:
       2016: 6000
-     situacio_laboral: desocupat
+     situacio_laboral: aturat
      grau_discapacitat: 34
      ha_esgotat_prestacio_de_desocupacio: true
      demandant_d_ocupacio_durant_12_mesos: true
