--- a/openfisca_barcelona/tests/benefits/AE-230.yaml
+++ b/openfisca_barcelona/tests/benefits/AE-230.yaml
@@ -7,6 +7,7 @@
     menors: ["infant1"]
     domicili_a_barcelona_ciutat: true
     es_usuari_serveis_socials: true
+    tipus_custodia: total
   persones:
    - id: "pare1"
      edat: 57
@@ -26,7 +27,6 @@
      ingressos_bruts:
       2016: 0
      anys_empadronat_a_barcelona: 2
-     tipus_custodia: 'total'
   output_variables:
     AE_230_mensual: [ 0, 0, 100]
 
@@ -39,6 +39,7 @@
     menors: ["infant1"]
     domicili_a_barcelona_ciutat: true
     es_usuari_serveis_socials: true
+    tipus_custodia: total
   persones:
    - id: "pare1"
      edat: 57
@@ -58,7 +59,6 @@
      ingressos_bruts:
       2016: 0
      anys_empadronat_a_barcelona: 1
-     tipus_custodia: 'total'
   output_variables:
     AE_230_mensual: [ 0, 0, 100]
 
@@ -72,6 +72,7 @@
     domicili_a_barcelona_ciutat: true
     es_usuari_serveis_socials: true
     tipus_familia_monoparental: general
+    tipus_custodia: total
   persones:
    - id: "pare1"
      edat: 57
@@ -85,7 +86,6 @@
      ingressos_bruts:
       2016: 0
      anys_empadronat_a_barcelona: 1
-     tipus_custodia: 'total'
   output_variables:
     AE_230_mensual: [ 0, 0]
 
@@ -98,6 +98,7 @@
     menors: ["infant1", "infant2"]
     domicili_a_barcelona_ciutat: true
     es_usuari_serveis_socials: true
+    tipus_custodia: total
   persones:
    - id: "pare1"
      edat: 57
@@ -111,14 +112,12 @@
      ingressos_bruts:
       2016: 0
      anys_empadronat_a_barcelona: 2
-     tipus_custodia: 'total'
    - id: "infant2"
      edat: 15
      municipi_empadronament: barcelona
      ingressos_bruts:
       2016: 0
      anys_empadronat_a_barcelona: 2
-     tipus_custodia: 'total'
   output_variables:
     AE_230_mensual: [ 0, 100, 100]
 
@@ -131,6 +130,7 @@
     menors: ["infant1", "infant2"]
     domicili_a_barcelona_ciutat: true
     es_usuari_serveis_socials: true
+    tipus_custodia: total
   persones:
    - id: "pare1"
      edat: 57
@@ -144,14 +144,12 @@
      ingressos_bruts:
       2016: 0
      anys_empadronat_a_barcelona: 2
-     tipus_custodia: 'total'
    - id: "infant2"
      edat: 15
      municipi_empadronament: barcelona
      ingressos_bruts:
       2016: 0
      anys_empadronat_a_barcelona: 2
-     tipus_custodia: 'total'
   output_variables:
     AE_230_mensual: [ 0, 0, 0]
 
@@ -164,6 +162,7 @@
     menors: ["infant1", "infant2"]
     domicili_a_barcelona_ciutat: true
     es_usuari_serveis_socials: true
+    tipus_custodia: total
   persones:
    - id: "pare1"
      edat: 57
@@ -183,13 +182,11 @@
      ingressos_bruts:
       2016: 0
      anys_empadronat_a_barcelona: 2
-     tipus_custodia: 'total'
    - id: "infant2"
      edat: 15
      municipi_empadronament: barcelona
      ingressos_bruts:
       2016: 0
      anys_empadronat_a_barcelona: 2
-     tipus_custodia: 'total'
   output_variables:
     AE_230_mensual: [ 0, 0, 0, 0]
