--- a/openfisca_barcelona/tests/benefits/GE-051-01.yaml
+++ b/openfisca_barcelona/tests/benefits/GE-051-01.yaml
@@ -13,7 +13,6 @@
      grau_discapacitat: 34
      ha_esgotat_prestacio_de_desocupacio: true
      inscrit_com_a_demandant_docupacio_mes_de_12_mesos: true
-     durant_el_mes_anterior_ha_presentat_solicituds_recerca_de_feina: true
      ha_estat_beneficiari_de_la_rai_en_els_ultims_12_mesos: false
      ha_estat_beneficiari_de_les_tres_rai_anteriors: false
      treballa_per_compte_propi: false
@@ -38,7 +37,6 @@
      grau_discapacitat: 34
      ha_esgotat_prestacio_de_desocupacio: true
      inscrit_com_a_demandant_docupacio_mes_de_12_mesos: true
-     durant_el_mes_anterior_ha_presentat_solicituds_recerca_de_feina: true
      ha_estat_beneficiari_de_la_rai_en_els_ultims_12_mesos: false
      ha_estat_beneficiari_de_les_tres_rai_anteriors: false
      treballa_per_compte_propi: false
@@ -53,7 +51,6 @@
      grau_discapacitat: 34
      ha_esgotat_prestacio_de_desocupacio: true
      inscrit_com_a_demandant_docupacio_mes_de_12_mesos: true
-     durant_el_mes_anterior_ha_presentat_solicituds_recerca_de_feina: true
      ha_estat_beneficiari_de_la_rai_en_els_ultims_12_mesos: false
      ha_estat_beneficiari_de_les_tres_rai_anteriors: false
      treballa_per_compte_propi: false
@@ -77,7 +74,6 @@
      grau_discapacitat: 32
      ha_esgotat_prestacio_de_desocupacio: true
      inscrit_com_a_demandant_docupacio_mes_de_12_mesos: true
-     durant_el_mes_anterior_ha_presentat_solicituds_recerca_de_feina: true
      ha_estat_beneficiari_de_la_rai_en_els_ultims_12_mesos: false
      ha_estat_beneficiari_de_les_tres_rai_anteriors: false
      treballa_per_compte_propi: false
@@ -87,7 +83,7 @@
   output_variables:
      GE_051_01_mensual: [0]
 
-- name: "Persona sense ha_esgotat_prestacio_de_desocupacio no reb l'ajuda"
+- name: "Persona no reb l'ajuda, ha_esgotat_prestacio_de_desocupacio"
   description: RAI 1 - Ajuda discapacitats 33% o superior
   period: 2017-01
   absolute_error_margin: false
@@ -101,7 +97,6 @@
      grau_discapacitat: 34
      ha_esgotat_prestacio_de_desocupacio: false
      inscrit_com_a_demandant_docupacio_mes_de_12_mesos: true
-     durant_el_mes_anterior_ha_presentat_solicituds_recerca_de_feina: true
      ha_estat_beneficiari_de_la_rai_en_els_ultims_12_mesos: false
      ha_estat_beneficiari_de_les_tres_rai_anteriors: false
      treballa_per_compte_propi: false
@@ -111,7 +106,7 @@
   output_variables:
      GE_051_01_mensual: [0]
 
-- name: "Persona sense discapacitat no reb l'ajuda"
+- name: "Persona no reb l'ajuda, inscrit_com_a_demandant_docupacio_mes_de_12_mesos"
   description: RAI 1 - Ajuda discapacitats 33% o superior
   period: 2017-01
   absolute_error_margin: false
@@ -125,7 +120,6 @@
      situacio_laboral: aturat
      ha_esgotat_prestacio_de_desocupacio: false
      inscrit_com_a_demandant_docupacio_mes_de_12_mesos: true
-     durant_el_mes_anterior_ha_presentat_solicituds_recerca_de_feina: true
      ha_estat_beneficiari_de_la_rai_en_els_ultims_12_mesos: false
      ha_estat_beneficiari_de_les_tres_rai_anteriors: false
      treballa_per_compte_propi: false
@@ -135,7 +129,7 @@
   output_variables:
      GE_051_01_mensual: [0]
 
-- name: "Persona sense discapacitat no reb l'ajuda"
+- name: "Persona no reb l'ajuda, inscrit_com_a_demandant_docupacio_mes_de_12_mesos"
   description: RAI 1 - Ajuda discapacitats 33% o superior
   period: 2017-01
   absolute_error_margin: false
@@ -149,7 +143,6 @@
      situacio_laboral: aturat
      ha_esgotat_prestacio_de_desocupacio: true
      inscrit_com_a_demandant_docupacio_mes_de_12_mesos: false
-     durant_el_mes_anterior_ha_presentat_solicituds_recerca_de_feina: true
      ha_estat_beneficiari_de_la_rai_en_els_ultims_12_mesos: false
      ha_estat_beneficiari_de_les_tres_rai_anteriors: false
      treballa_per_compte_propi: false
@@ -159,7 +152,7 @@
   output_variables:
      GE_051_01_mensual: [0]
 
-- name: "Persona sense discapacitat no reb l'ajuda"
+- name: "Persona no reb l'ajuda, ha_estat_beneficiari_de_la_rai_en_els_ultims_12_mesos"
   description: RAI 1 - Ajuda discapacitats 33% o superior
   period: 2017-01
   absolute_error_margin: false
@@ -173,31 +166,6 @@
      situacio_laboral: aturat
      ha_esgotat_prestacio_de_desocupacio: true
      inscrit_com_a_demandant_docupacio_mes_de_12_mesos: true
-     durant_el_mes_anterior_ha_presentat_solicituds_recerca_de_feina: false
-     ha_estat_beneficiari_de_la_rai_en_els_ultims_12_mesos: false
-     ha_estat_beneficiari_de_les_tres_rai_anteriors: false
-     treballa_per_compte_propi: false
-     ingressat_en_centre_penitenciari: false
-     percep_prestacions_incompatibles_amb_la_feina: false
-     beneficiari_ajuts_per_violencia_de_genere: false
-  output_variables:
-     GE_051_01_mensual: [0]
-
-- name: "Persona sense discapacitat no reb l'ajuda"
-  description: RAI 1 - Ajuda discapacitats 33% o superior
-  period: 2017-01
-  absolute_error_margin: false
-  families:
-     adults: ["adult1"]
-  persones:
-   - id: "adult1"
-     ingressos_bruts:
-      2016: 6000
-     grau_discapacitat: 34
-     situacio_laboral: aturat
-     ha_esgotat_prestacio_de_desocupacio: true
-     inscrit_com_a_demandant_docupacio_mes_de_12_mesos: true
-     durant_el_mes_anterior_ha_presentat_solicituds_recerca_de_feina: true
      ha_estat_beneficiari_de_la_rai_en_els_ultims_12_mesos: true
      ha_estat_beneficiari_de_les_tres_rai_anteriors: false
      treballa_per_compte_propi: false
@@ -207,7 +175,7 @@
   output_variables:
      GE_051_01_mensual: [0]
 
-- name: "Persona sense discapacitat no reb l'ajuda"
+- name: "Persona no reb l'ajuda, ha_estat_beneficiari_de_les_tres_rai_anteriors"
   description: RAI 1 - Ajuda discapacitats 33% o superior
   period: 2017-01
   absolute_error_margin: false
@@ -221,7 +189,6 @@
      situacio_laboral: aturat
      ha_esgotat_prestacio_de_desocupacio: true
      inscrit_com_a_demandant_docupacio_mes_de_12_mesos: true
-     durant_el_mes_anterior_ha_presentat_solicituds_recerca_de_feina: true
      ha_estat_beneficiari_de_la_rai_en_els_ultims_12_mesos: false
      ha_estat_beneficiari_de_les_tres_rai_anteriors: true
      treballa_per_compte_propi: false
@@ -231,7 +198,7 @@
   output_variables:
      GE_051_01_mensual: [0]
 
-- name: "Persona sense discapacitat no reb l'ajuda"
+- name: "Persona no reb l'ajuda, treballa_per_compte_propi"
   description: RAI 1 - Ajuda discapacitats 33% o superior
   period: 2017-01
   absolute_error_margin: false
@@ -245,7 +212,6 @@
      situacio_laboral: aturat
      ha_esgotat_prestacio_de_desocupacio: true
      inscrit_com_a_demandant_docupacio_mes_de_12_mesos: true
-     durant_el_mes_anterior_ha_presentat_solicituds_recerca_de_feina: true
      ha_estat_beneficiari_de_la_rai_en_els_ultims_12_mesos: false
      ha_estat_beneficiari_de_les_tres_rai_anteriors: false
      treballa_per_compte_propi: true
@@ -255,7 +221,7 @@
   output_variables:
      GE_051_01_mensual: [0]
 
-- name: "Persona sense discapacitat no reb l'ajuda"
+- name: "Persona no reb l'ajuda, ingressat_en_centre_penitenciari"
   description: RAI 1 - Ajuda discapacitats 33% o superior
   period: 2017-01
   absolute_error_margin: false
@@ -269,7 +235,6 @@
      situacio_laboral: aturat
      ha_esgotat_prestacio_de_desocupacio: true
      inscrit_com_a_demandant_docupacio_mes_de_12_mesos: true
-     durant_el_mes_anterior_ha_presentat_solicituds_recerca_de_feina: true
      ha_estat_beneficiari_de_la_rai_en_els_ultims_12_mesos: false
      ha_estat_beneficiari_de_les_tres_rai_anteriors: false
      treballa_per_compte_propi: false
@@ -279,7 +244,7 @@
   output_variables:
      GE_051_01_mensual: [0]
 
-- name: "Persona sense discapacitat no reb l'ajuda"
+- name: "Persona no reb l'ajuda, percep_prestacions_incompatibles_amb_la_feina"
   description: RAI 1 - Ajuda discapacitats 33% o superior
   period: 2017-01
   absolute_error_margin: false
@@ -293,7 +258,6 @@
      situacio_laboral: aturat
      ha_esgotat_prestacio_de_desocupacio: true
      inscrit_com_a_demandant_docupacio_mes_de_12_mesos: true
-     durant_el_mes_anterior_ha_presentat_solicituds_recerca_de_feina: true
      ha_estat_beneficiari_de_la_rai_en_els_ultims_12_mesos: false
      ha_estat_beneficiari_de_les_tres_rai_anteriors: false
      treballa_per_compte_propi: false
@@ -303,7 +267,7 @@
   output_variables:
      GE_051_01_mensual: [0]
 
-- name: "Persona sense discapacitat no reb l'ajuda"
+- name: "Persona no reb l'ajuda, beneficiari_ajuts_per_violencia_de_genere"
   description: RAI 1 - Ajuda discapacitats 33% o superior
   period: 2017-01
   absolute_error_margin: false
@@ -317,7 +281,6 @@
      situacio_laboral: aturat
      ha_esgotat_prestacio_de_desocupacio: true
      inscrit_com_a_demandant_docupacio_mes_de_12_mesos: true
-     durant_el_mes_anterior_ha_presentat_solicituds_recerca_de_feina: true
      ha_estat_beneficiari_de_la_rai_en_els_ultims_12_mesos: false
      ha_estat_beneficiari_de_les_tres_rai_anteriors: false
      treballa_per_compte_propi: false
